syntax = "proto3";
package control_relay_service.v1;
option go_package = "control_relay/pb";

import "google/protobuf/empty.proto";

service ControlRelayHelloService {
  rpc Hello (HelloRequest) returns (HelloResponse) {}
}

message ControllerHello {
}

message DeviceHello {
  string device_name = 1;
}

message HelloRequest {
  oneof local_endpoint_hello {
    ControllerHello   controller = 1;
    DeviceHello       device = 2;
  }
}

message HelloResponse {
  oneof remote_endpoint_hello {
    ControllerHello   controller = 1;
    DeviceHello       device = 2;
  }
}
